# MCMF

./: CMakeLists.txt  README  README.markdown  README.rdoc  cmdparams.lex  cmfa.cpp  cmfa.h  descfact.cpp  descfact.h  fields.cpp  fields.h  grammar.y  kernel.cpp  kernel.h  machine.cpp  machine.h  mcmf.cpp  parser.h  svm.cpp  svm.h
cmake/modules/: FindBison.cmake  FindFlex.cmake
descrs/: fp2.cpp  fp2.h  fp2s.cpp  fp2s.h  mnadescr.cpp  mnadescr.h  spectrophores.cpp  spectrophores.h
kernels/: abraham.cpp  abraham.h  electro.cpp  electro.h  gauss.cpp  gauss.h  hydropho.cpp  hydropho.h  hydrophov.cpp  hydrophov.h  linear.cpp  linear.h  steric.cpp  steric.h  sterick.cpp  sterick.h  tanimoto.cpp  tanimoto.h
machines/: oneclasssvm.cpp  oneclasssvm.h  svr.cpp  svr.h
nnet/: CMakeLists.txt  Net.cpp  Net.h  NetLayer.cpp  occ.cpp  types.h  vector_io.h
nnet/occprog/: CMakeLists.txt  occprog.cpp
nnet/prognosis/: CMakeLists.txt  prognosis.cpp
seal/: CMakeLists.txt  align.cpp  ks_seal.cpp  ks_seal.h  pseal.cpp  seal.cpp  seal.h
seal/thread/: CMakeLists.txt  pseal.cpp
utils/: extr.cpp
utils/auc/: CMakeLists.txt  auc.cpp
utils/dsc2set/: CMakeLists.txt  dsc2set.cpp
utils/fp2/: CMakeLists.txt  fp2.cpp
utils/ot/: CMakeLists.txt  ot.cpp
utils/spc/: CMakeLists.txt  spc.cpp
utils/spct/: CMakeLists.txt  spct.cpp
utils/tnt/: CMakeLists.txt  tnt.cpp
